--- a/source/main_window_dlg.ui
+++ b/source/main_window_dlg.ui
@@ -17,7 +17,13 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>CursorLocker Qt Edition</string>
+   <string>CursorLocker Redux</string>
+  </property>
+  <property name="iconSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_2">
