--- a/source/main_window_dlg.ui
+++ b/source/main_window_dlg.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>510</width>
-    <height>587</height>
+    <width>512</width>
+    <height>230</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>510</width>
-    <height>510</height>
+    <width>512</width>
+    <height>230</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -30,126 +30,6 @@
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="grp_main_layout">
       <item>
-       <widget class="QGroupBox" name="grp_lock_controls">
-        <property name="title">
-         <string>Lock Control</string>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_3">
-         <item>
-          <widget class="QPushButton" name="btn_lock_state">
-           <property name="text">
-            <string>Lock</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="grp_lock_frequency">
-        <property name="title">
-         <string>Locking Frequency [ 1ms - 200ms ]</string>
-        </property>
-        <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QSlider" name="hslid_lock_frequency">
-           <property name="minimum">
-            <number>1</number>
-           </property>
-           <property name="maximum">
-            <number>200</number>
-           </property>
-           <property name="singleStep">
-            <number>25</number>
-           </property>
-           <property name="pageStep">
-            <number>25</number>
-           </property>
-           <property name="value">
-            <number>100</number>
-           </property>
-           <property name="sliderPosition">
-            <number>100</number>
-           </property>
-           <property name="tracking">
-            <bool>true</bool>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="tickPosition">
-            <enum>QSlider::TicksBelow</enum>
-           </property>
-           <property name="tickInterval">
-            <number>25</number>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="grp_resolution">
-        <property name="title">
-         <string>Override Resolution</string>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QSpinBox" name="sbox_resX">
-           <property name="minimumSize">
-            <size>
-             <width>1</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="minimum">
-            <number>1</number>
-           </property>
-           <property name="maximum">
-            <number>20000</number>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="lbl_x_sign">
-           <property name="maximumSize">
-            <size>
-             <width>5</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>X</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QSpinBox" name="sbox_resY">
-           <property name="minimum">
-            <number>1</number>
-           </property>
-           <property name="maximum">
-            <number>20000</number>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="lbl_center">
-           <property name="maximumSize">
-            <size>
-             <width>75</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>~&gt; </string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
        <widget class="QGroupBox" name="grp_activation">
         <property name="title">
          <string>Activation Method</string>
@@ -158,7 +38,12 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
-            <widget class="QComboBox" name="cbx_activation">
+            <widget class="QComboBox" name="cbx_activation_method">
+             <item>
+              <property name="text">
+               <string>Nothing</string>
+              </property>
+             </item>
              <item>
               <property name="text">
                <string>Keybinding</string>
@@ -166,16 +51,14 @@
              </item>
              <item>
               <property name="text">
-               <string>Process</string>
+               <string>Process Image</string>
               </property>
              </item>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="btn_edit_activation">
-             <property name="text">
-              <string>Edit</string>
-             </property>
+             <item>
+              <property name="text">
+               <string>Window Title</string>
+              </property>
+             </item>
             </widget>
            </item>
           </layout>
@@ -183,22 +66,19 @@
          <item>
           <layout class="QHBoxLayout" name="grp_activation_parameters">
            <item>
-            <widget class="QLineEdit" name="lin_vkid">
+            <widget class="QLineEdit" name="lin_activation_parameter">
              <property name="enabled">
               <bool>false</bool>
              </property>
              <property name="placeholderText">
-              <string>Virtual Key ID (VKID) Default: 6A (Numpad *)</string>
+              <string>No activation method selected</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lin_process">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="placeholderText">
-              <string>Process Name | (TESV.exe, SkyrimSE.exe)</string>
+            <widget class="QPushButton" name="btn_edit_activation_parameter">
+             <property name="text">
+              <string>Edit</string>
              </property>
             </widget>
            </item>
@@ -210,7 +90,7 @@
       <item>
        <widget class="QGroupBox" name="grp_console">
         <property name="title">
-         <string>Debug Log</string>
+         <string>Debug Console</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
