--- a/source/main_wnd.ui
+++ b/source/main_wnd.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>CursorLocker Redux</string>
+   <string>Cursor Locker</string>
   </property>
   <property name="iconSize">
    <size>
