--- a/source/main_wnd.ui
+++ b/source/main_wnd.ui
@@ -36,7 +36,7 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="5,0">
            <item>
             <widget class="QComboBox" name="cbx_activation_method">
              <item>
@@ -59,6 +59,13 @@
                <string>Window Title</string>
               </property>
              </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btn_mutebeepboop">
+             <property name="text">
+              <string>Mute</string>
+             </property>
             </widget>
            </item>
           </layout>
