Added debug console context menu
The debug console now has a custom context menu which can clear it and
change the minimum log level.

--- a/source/main_wnd.ui
+++ b/source/main_wnd.ui
@@ -102,6 +102,9 @@
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QPlainTextEdit" name="txt_console">
+           <property name="contextMenuPolicy">
+            <enum>Qt::CustomContextMenu</enum>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
