Added hotkey modifier support, and dynamic UI changes.
- A dropdown now appears to the left of the activation parameter text
field whenever hotkey activation mode is selected, which allows the user
to specify a modifier (e.g. alt, shift, control, etc), in combination to
the VKID.

- A "Grab" button also appears whenever window title mode is selected,
allowing the user to grab the foreground window, without having to
right click the edit button.

- Couple tweaks to how widgets get enabled and disabled to ensure clean
user input.

- Changed targetHotkeyId from 420 decimal to 420 hex ;)

--- a/source/main_wnd.ui
+++ b/source/main_wnd.ui
@@ -39,6 +39,12 @@
           <layout class="QHBoxLayout" name="hlActivationMethod" stretch="5,0">
            <item>
             <widget class="QComboBox" name="cbxActivationMethod">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>25</height>
+              </size>
+             </property>
              <item>
               <property name="text">
                <string>Nothing</string>
@@ -71,7 +77,7 @@
           </layout>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="hlActivationParameter">
+          <layout class="QHBoxLayout" name="hlActivationParameter" stretch="0,0">
            <item>
             <widget class="QLineEdit" name="linActivationParameter">
              <property name="enabled">
