Added process image scanner mode support
The WindowTreeDialog has been transformed into ProcessScannerDialog, and
now takes a ProcessScanner::SCAN_SCOPE as a constructor argument, which
determines the mode of the dialog (Window vs Process). Added another
select button for the process image mode which spawns the process
scanner in process mode, allowing for the selection of processes as well
as windows. Renamed relevant files and variables to reflect changes.

--- a/source/process_scanner_dialog.ui
+++ b/source/process_scanner_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>WindowTreeDialog</class>
- <widget class="QDialog" name="WindowTreeDialog">
+ <class>ProcessScannerDialog</class>
+ <widget class="QDialog" name="ProcessScannerDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -24,7 +24,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QTreeWidget" name="trwWindowTree">
+      <widget class="QTreeWidget" name="twProcessTree">
        <property name="contextMenuPolicy">
         <enum>Qt::CustomContextMenu</enum>
        </property>
