Structural improvements to code; better design.
- Replaced the debug console baked into the MainWindow class with the custom QDebugConsole widget, and updated all `logToConsole` calls with `dbgConsole->log` calls accordingly, and removed the uneeded class variables associated with the old console (enums, vars, functions, etc).

- Added two helper functions to aid in adding and removing dynamic widgets from the activation parameter layout, to prevent duplicate code / checks.

- Changed the approach of storing a pointer to the timed activation method as a static within changeActivationMethod for the sake of later disconnecting it, with storing a QMetaObject::Connection as a member variable, and using that to disconnect the connection.

- Simplified the `changeActivationMethod(int)` using the new helper functions, QMetaObject::Connections, and other code mimisaton.

- Reduced the two QPushButton's for starting the process scanner in window mode and in process mode to just a single QPushButton whose connections change according to the activation method, called btnSpawnProcessScanner, and updated constructor accordingly to get rid of the removed button's initialization.

- Updated case syntax to remove curly braces.

- Removed the static ProcessScannerDialog* instance from spawnProcessScannerDialog, in favor of making it a member variable, still allowing spawnProcessScannerDialog to handle its construction and deletion, and initializing it to nullptr in the constructor.

- Adapted the context menu to work with the new QDebugConsole widget.

- Updated the MainWindow initialization list to include all of the member variables, in a neatly organized format.

- Improved the structure of MainWindow's header file, as well as having updated it to reflect the above changes. Added new comments, and general stylistic changes.

- Made some simple changes to UI layout structure, but no visual changes were made.

- Removed the need for SetContext and ClearContext in QDebugConsole by j

--- a/source/mainwindow_dialog.ui
+++ b/source/mainwindow_dialog.ui
@@ -26,100 +26,84 @@
    </size>
   </property>
   <widget class="QWidget" name="gdMain">
-   <layout class="QGridLayout" name="gridLayout_2">
+   <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,1">
     <item row="0" column="0">
-     <layout class="QVBoxLayout" name="vlMain">
-      <item>
-       <widget class="QGroupBox" name="vlActivation">
-        <property name="title">
-         <string>Activation Method</string>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
+     <widget class="QGroupBox" name="vlActivation">
+      <property name="title">
+       <string>Activation Method</string>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <layout class="QHBoxLayout" name="hlActivationMethod" stretch="5,0">
          <item>
-          <layout class="QHBoxLayout" name="hlActivationMethod" stretch="5,0">
-           <item>
-            <widget class="QComboBox" name="cbxActivationMethod">
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>25</height>
-              </size>
-             </property>
-             <item>
-              <property name="text">
-               <string>Nothing</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Keybinding</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Process Image</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Window Title</string>
-              </property>
-             </item>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="btnMuteBeepBoop">
-             <property name="text">
-              <string>Mute</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="hlActivationParameter" stretch="0,0">
-           <item>
-            <widget class="QLineEdit" name="linActivationParameter">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="placeholderText">
-              <string>No activation method selected</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="btnEditActivationParameter">
-             <property name="text">
-              <string>Edit</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="vlConsole">
-        <property name="title">
-         <string>Debug Console</string>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QPlainTextEdit" name="txtConsole">
-           <property name="contextMenuPolicy">
-            <enum>Qt::CustomContextMenu</enum>
+          <widget class="QComboBox" name="cbxActivationMethod">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
            </property>
-           <property name="readOnly">
-            <bool>true</bool>
+           <item>
+            <property name="text">
+             <string>Nothing</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Keybinding</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Process Image</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Window Title</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnMuteBeepBoop">
+           <property name="text">
+            <string>Mute</string>
            </property>
           </widget>
          </item>
         </layout>
-       </widget>
-      </item>
-     </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="hlActivationParameter" stretch="0,0">
+         <item>
+          <widget class="QLineEdit" name="linActivationParameter">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="placeholderText">
+            <string>No activation method selected</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnEditActivationParameter">
+           <property name="text">
+            <string>Edit</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QGroupBox" name="grpDebugConsole">
+      <property name="title">
+       <string>Debug Console</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
