Created settings dialog, refactored other things
- New dialog has been created, which is now responsible for managing the default JSON settings graphically.
- Old JSON system has been removed from the MainWindow dialog class, and replaced with calls to the new settings dialog class.
- Moved the activation method resolver from  `MainWindow::changeActivationMethod` to the JsonSettingsDialog class as a static member variable, `ActivationMethodResolverSTOI` with a `ITOS` variant too for int-to-string lookups.
- Reformated some existing code to look better.
- ProcessScannerDialog now has its windowflags and attributes set in its own constructor.
- Removed some uneeded/commented code.
- A bunch of other minor bugfixes.

--- a/source/main_window_dialog.ui
+++ b/source/main_window_dialog.ui
@@ -34,7 +34,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <layout class="QHBoxLayout" name="hlActivationMethod" stretch="5,0">
+        <layout class="QHBoxLayout" name="hlActivationMethod" stretch="5,0,0">
          <item>
           <widget class="QComboBox" name="cbxActivationMethod">
            <property name="minimumSize">
@@ -50,23 +50,42 @@
            </item>
            <item>
             <property name="text">
-             <string>Keybinding</string>
+             <string>Hotkey</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Process Image</string>
+             <string>Process Running</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Window Title</string>
+             <string>Foreground Window Title</string>
             </property>
            </item>
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="btnSettings">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Settings</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="btnMuteBeepBoop">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
            <property name="text">
             <string>Mute</string>
            </property>
@@ -88,6 +107,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="btnEditActivationParameter">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
            <property name="text">
             <string>Edit</string>
            </property>
