--- a/source/main_window_dialog.ui
+++ b/source/main_window_dialog.ui
@@ -79,7 +79,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btnMuteBeepBoop">
+          <widget class="QPushButton" name="btnMuteSoundEffects">
            <property name="minimumSize">
             <size>
              <width>0</width>
