--- a/source/main_window_dialog.ui
+++ b/source/main_window_dialog.ui
@@ -94,7 +94,7 @@
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="hlActivationParameter" stretch="0,0">
+        <layout class="QHBoxLayout" name="hlActivationParameter" stretch="0,0,0">
          <item>
           <widget class="QLineEdit" name="linActivationParameter">
            <property name="enabled">
@@ -115,6 +115,19 @@
            </property>
            <property name="text">
             <string>Edit</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnClearActivationParameter">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Clear</string>
            </property>
           </widget>
          </item>
