Connected style polish lambdas to ProcessScannerDialog's QLineEdit textChanged signals.

--- a/source/process_scanner_dialog.ui
+++ b/source/process_scanner_dialog.ui
@@ -100,7 +100,7 @@
         </widget>
        </item>
        <item>
-        <widget class="Line" name="line_2">
+        <widget class="Line" name="lineScanner">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -197,7 +197,7 @@
         </widget>
        </item>
        <item>
-        <widget class="Line" name="line">
+        <widget class="Line" name="lineScanFilters">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
