Removed QHeaderView sorting direction arrows

--- a/indigo-style/indigo.qss
+++ b/indigo-style/indigo.qss
@@ -177,6 +177,11 @@ QHeaderView::section:vertical
 {
     background-color: rgb(30, 30, 100);
 }
+
+QHeaderView::up-arrow,
+QHeaderView::down-arrow {
+    image: transparent;
+}
 /* ---------------------------------------------------------------------------------------------------- */
 
 
