Added Sorting To Vkid Table
- VKID Table sorting has been enabled.
- The way that the process scanner tree sorting indicator is hidden has been changed.

--- a/source/vkid_table_dialog.ui
+++ b/source/vkid_table_dialog.ui
@@ -48,8 +48,11 @@
          <enum>QAbstractItemView::SelectRows</enum>
         </property>
         <property name="sortingEnabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
+        <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+         <bool>false</bool>
+        </attribute>
         <column>
          <property name="text">
           <string>Description</string>
