--- a/source/process_scanner_dialog.ui
+++ b/source/process_scanner_dialog.ui
@@ -31,8 +31,14 @@
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
+       <property name="sortingEnabled">
+        <bool>true</bool>
+       </property>
        <attribute name="headerMinimumSectionSize">
         <number>40</number>
+       </attribute>
+       <attribute name="headerShowSortIndicator" stdset="0">
+        <bool>false</bool>
        </attribute>
        <column>
         <property name="text">
